Added errors and exceptions

--- a/Intermediate.ipynb
+++ b/Intermediate.ipynb
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "45d534da",
    "metadata": {},
    "outputs": [
@@ -1794,6 +1794,199 @@
     "\n",
     "# similarily, we can use lambda for 'reduce' or 'filter' functions"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e04b34e0",
+   "metadata": {},
+   "source": [
+    "## Errors and Exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f9b06ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "The program we write may have some edge cases in which they might throw error, thus for uninterrupted working must handle these\n",
+    "errors and exceptions. \n",
+    "In python, we can handle errors and exceptions by using a 'try' block.\n",
+    "\n",
+    "Some common python errors are:\n",
+    "1.invalid syntax\n",
+    "2.unsupported operand\n",
+    "3.module not found\n",
+    "4.name error\n",
+    "5.file not found\n",
+    "6.value error\n",
+    "7.index error\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7417f8a",
+   "metadata": {},
+   "source": [
+    "### Raising exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d81ca6c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Number should be positive",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m a\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNumber should be positive\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mException\u001b[0m: Number should be positive"
+     ]
+    }
+   ],
+   "source": [
+    "a=-5\n",
+    "if a<0:\n",
+    "    raise Exception('Number should be positive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e8395025",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Number should be positive",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m b\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m(b\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m),\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNumber should be positive\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Number should be positive"
+     ]
+    }
+   ],
+   "source": [
+    "b=-10\n",
+    "assert(b>0),'Number should be positive'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d720d44",
+   "metadata": {},
+   "source": [
+    "### Handling errors and exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6c99d1d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occured which is : division by zero\n",
+      "Code executed successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a=10/0\n",
+    "except Exception as e:  # we can also specify the name of the exception instead using the keyword 'Exception'\n",
+    "    print(\"An error occured which is :\",e)\n",
+    "else:\n",
+    "    print('No error occurred')\n",
+    "finally:\n",
+    "    print('Code executed successfully')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4bc737b",
+   "metadata": {},
+   "source": [
+    "### Defining our own errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "07d288c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueTooHigh",
+     "evalue": "The value is too high",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueTooHigh\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m(x\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m10\u001b[39m):\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ValueTooHigh(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe value is too high\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m test(\u001b[38;5;241m19\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[10], line 6\u001b[0m, in \u001b[0;36mtest\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtest\u001b[39m(x):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m(x\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m10\u001b[39m):\n\u001b[1;32m----> 6\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ValueTooHigh(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe value is too high\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueTooHigh\u001b[0m: The value is too high"
+     ]
+    }
+   ],
+   "source": [
+    "class ValueTooHigh(Exception):\n",
+    "    pass   # we can also write a proper error class here \n",
+    "\n",
+    "def test(x):\n",
+    "    if(x>10):\n",
+    "        raise ValueTooHigh(\"The value is too high\")\n",
+    "        \n",
+    "test(19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0b88d279",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is printed under except block because an exception/error occured which is ->  The value is too high\n",
+      "This will run everytime no matter if error occurs or not\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    test(20)\n",
+    "except ValueTooHigh as vth:\n",
+    "    print('This is printed under except block because an exception/error occured which is -> ',vth)\n",
+    "else:\n",
+    "    print('This is printed under else block because no exception/error occurred')\n",
+    "finally:\n",
+    "    print('This will run everytime no matter if error occurs or not')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38199404",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
