added random and secrets module

--- a/Intermediate part2.ipynb
+++ b/Intermediate part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba70b142",
+   "id": "e2cfdc04",
    "metadata": {},
    "source": [
     "# Intermediate part 2"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c61d746",
+   "id": "d000b7dc",
    "metadata": {},
    "source": [
     "## JSON\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e655c472",
+   "id": "485de39d",
    "metadata": {},
    "source": [
     "### Python data types and their JSON equivalent\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dad285d6",
+   "id": "824c2557",
    "metadata": {},
    "source": [
     "### Serialisation/Encoding : converting python data into json format"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b059a8db",
+   "id": "8e2b7090",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade9edb4",
+   "id": "318b0d13",
    "metadata": {},
    "source": [
     "<p> We can now write this data in a file using the syntax below:</p>"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea5f2f7",
+   "id": "edd8a10c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "157164cd",
+   "id": "a98a5a39",
    "metadata": {},
    "source": [
     "## Decoding"
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6379a09a",
+   "id": "3be0350b",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e90517a4",
+   "id": "c4c85411",
    "metadata": {},
    "source": [
     "### Encoding our own defined classes into JSON format"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1c4b2be6",
+   "id": "c410ea8e",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2c22e850",
+   "id": "b7e7617e",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ebbf1c69",
+   "id": "c818bc91",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86747e84",
+   "id": "efce4d9f",
    "metadata": {},
    "source": [
     "## Random numbers"
@@ -281,28 +281,286 @@
   },
   {
    "cell_type": "markdown",
-   "id": "179bc4a6",
+   "id": "b7a8a88b",
    "metadata": {},
-   "source": []
+   "source": [
+    "<p>Python has a library called 'random' which is used to generate random numbers and can be beneficial in various cases</p>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "68a2970f",
+   "execution_count": 64,
+   "id": "923d1382",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.07540504863446373\n"
+      "0.7043441181447953\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "a = random.random()\n",
-    "print(a)  # prints a random value of a evertime it runs"
+    "print(a)  # prints a random value of a between 0 to 1 evertime it runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "06d490f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.519042074635048\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = random.uniform(1,10)\n",
+    "print(b)  # prints a random value between 1 to 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "29f02b9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = random.randint(1,10)\n",
+    "print(c)  # prints a random integer value between 1 to 10 (1 and 10 included)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "6f8b68b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = random.randrange(1,10)\n",
+    "print(d)  # prints a random integer between 1 to 10 with 10 excluded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "afeea462",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7782917036652018\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = random.normalvariate(0,1) # generates a random value of a normal distribution with mean=0 and S.D=1\n",
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "4bf4a2a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=list('ABCDEFGHIJK')\n",
+    "print(random.choice(f)) # prints a random element of the list 'f'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "eb34455a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'I', 'C']\n"
+     ]
+    }
+   ],
+   "source": [
+    "smpl2 = random.choices(f,k=3)  # generates a random of 3 from list 'f' but a element can occur more than once\n",
+    "print(smpl2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "0525c721",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C', 'J', 'F']\n"
+     ]
+    }
+   ],
+   "source": [
+    "smpl = random.sample(f,3) # generates a random sample of 3 from list 'f' with each element being chosen once\n",
+    "print(smpl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "ab0a7f19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['E', 'H', 'F', 'C', 'D', 'I', 'K', 'J', 'G', 'A', 'B']\n"
+     ]
+    }
+   ],
+   "source": [
+    "g=f.copy()\n",
+    "random.shuffle(g) # randomly shuffles the list 'g'\n",
+    "print(g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c507c999",
+   "metadata": {},
+   "source": [
+    "<p> The examples of random numbers we did above are 'pseudo' random numbers because they can be reproduced by the following method </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "55ad0cac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(1)\n",
+    "print(random.randint(1,10))\n",
+    "\n",
+    "random.seed(2)\n",
+    "print(random.randint(1,10))\n",
+    "\n",
+    "random.seed(1)\n",
+    "print(random.randint(1,10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e73a8582",
+   "metadata": {},
+   "source": [
+    "<p> The above block of code will generate the same output irrespective of the trials. This is because we have used 'random.seed' method. This method holds the value of a random number due to this the data can be reproduced which is why it is not recommended to use it for security purposes. For security purposes, we use 'secret' module offered by python </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "6fdd4e66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import secrets\n",
+    "a = secrets.randbelow(10)  # prints random integer between 0 to 10 with 10 being the excluded value\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "fac7cf91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = secrets.randbits(4)\n",
+    "print(b)  # generates a random 4 byte number "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "ab721985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = list('ABCDEFGHIJ')\n",
+    "print(secrets.choice(c))"
    ]
   }
  ],
