--- a/Intermediate part2.ipynb
+++ b/Intermediate part2.ipynb
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8f943908",
+   "id": "76da52f0",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f86f2f",
+   "id": "a6bab3fb",
    "metadata": {},
    "source": [
     "<p> Note : The above code will not work properly and will throw error if our function has some arguments in it. Therefore we can make a optimised decorator by the following way : </p>"
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e16cff45",
+   "id": "df36f072",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dbe69e8a",
+   "id": "9e944928",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f68ab27",
+   "id": "2d7f7ea5",
    "metadata": {},
    "source": [
     "<p> We can see that python got confused between the identity of 'add1' function and wrapper function as it says that the name of the 'add1' function is 'wrapper'. Therefore we can fix it using a inbuilt python module called <strong>'functools'</strong></p>"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d99b641d",
+   "id": "a0ecb11e",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b68695d",
+   "id": "01d82d29",
    "metadata": {},
    "source": [
     "<p> Now we can see that the function is identified correctly. Therefore the above written code can be used as a template for writting decorators</p>"
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e50c56af",
+   "id": "eae7c69c",
    "metadata": {},
    "source": [
     "<p> If our decorator function also takes an argument, then we can write the code as below:</p>"
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a5da68fb",
+   "id": "85881c62",
    "metadata": {},
    "outputs": [
     {
@@ -827,19 +827,191 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71fdb2a1",
+   "id": "1cbf8786",
    "metadata": {},
    "source": [
     "<p> We can also have nested decorators and class decorators</p>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fad2c625",
+   "metadata": {},
+   "source": [
+    "## Generators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "726d806e",
+   "metadata": {},
+   "source": [
+    "<p>Generators are functions that can be paused and resumed on the fly, returning an object that can be iterated over. Unlike lists, they are lazy and thus produce items one at a time and only when asked. So they are much more memory efficient when dealing with large datasets.\n",
+    "A generator is defined like a normal function but with the yield statement instead of return.</p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "40fb1395",
+   "execution_count": 26,
+   "id": "38f5aca9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# basic syntax of a generator:\n",
+    "\n",
+    "def generator():\n",
+    "    yield 1\n",
+    "    yield 2\n",
+    "    yield 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea484472",
+   "metadata": {},
+   "source": [
+    "<p>Calling the function does not execute it. Instead, the function returns a generator object which is used to control execution. Generator objects execute when next() is called. When calling next() the first time, execution begins at the start of the function and continues until the first yield statement where the value to the right of the statement is returned. Subsequent calls to next() continue from the yield statement (and loop around) until another yield is reached. If yield is not called because of a condition or the end is reached, a StopIteration exception is raised:</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8e90ff3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mnext\u001b[39m(cd))\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# this will raise a StopIteration\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mnext\u001b[39m(cd))\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def countdown(num):\n",
+    "    print('Starting')\n",
+    "    while num > 0:\n",
+    "        yield num\n",
+    "        num -= 1\n",
+    "\n",
+    "# this will not print 'Starting'\n",
+    "cd = countdown(3)\n",
+    "\n",
+    "# this will print 'Starting' and the first value\n",
+    "print(next(cd))\n",
+    "\n",
+    "# will print the next values\n",
+    "print(next(cd))\n",
+    "print(next(cd))\n",
+    "\n",
+    "# this will raise a StopIteration\n",
+    "print(next(cd))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7369064",
+   "metadata": {},
+   "source": [
+    "<p>Generators are <strong>more memory effecient</strong> in many cases spcially when we are workking over a large data set, the following example shows this: \n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b417f00c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size without using generators:\n",
+      "8448728 bytes\n",
+      "\n",
+      "-----------------------------\n",
+      "\n",
+      "Size while using generators:\n",
+      "200 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(\"Size without using generators:\")\n",
+    "def firstn(n):\n",
+    "    num, nums = 0, []\n",
+    "    while num < n:\n",
+    "        nums.append(num)\n",
+    "        num += 1\n",
+    "    return nums\n",
+    "\n",
+    "sum_of_first_n = sum(firstn(1000000))\n",
+    "\n",
+    "print(sys.getsizeof(firstn(1000000)), \"bytes\")\n",
+    "\n",
+    "print(\"\\n-----------------------------\\n\")\n",
+    "\n",
+    "print(\"Size while using generators:\")\n",
+    "def firstn(n):\n",
+    "    num = 0\n",
+    "    while num < n:\n",
+    "        yield num\n",
+    "        num += 1\n",
+    "\n",
+    "sum_of_first_n = sum(firstn(1000000))\n",
+    "print(sys.getsizeof(firstn(1000000)), \"bytes\")\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7295caf3",
+   "metadata": {},
+   "source": [
+    "<p><strong>Generator expressions:</strong> These are the same as list comprehension but as discussed earlier, they save much more space. Generator expressions are written inside a noraml brakcet '()' while list comprehension is written inside '[]'</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a420f3fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "208\n",
+      "444376\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generator expression\n",
+    "mygenerator = (i for i in range(100000) if i % 2 == 0)\n",
+    "print(sys.getsizeof(mygenerator))\n",
+    "\n",
+    "# list comprehension\n",
+    "mylist = [i for i in range(100000) if i % 2 == 0]\n",
+    "print(sys.getsizeof(mylist))\n",
+    "     "
+   ]
   }
  ],
  "metadata": {
